# IRCClient

IRCClient/: AUTHORS  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool
IRCClient/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
IRCClient/po/: Makefile  Makefile.in
IRCClient/src/: IRC  Makefile  Makefile.am  Makefile.in  Message.c  Message.vala  MyServer.c  MyServer.vala  SQLiteDB.c  SQLiteDB.vala  main.c  main.vala
IRCClient/src/.deps/: IRC-Message.Po  IRC-MyServer.Po  IRC-SQLiteDB.Po  IRC-Server.Po  IRC-main.Po
